--- a/spi-2016/devops/tp7/docker-compose.yaml
+++ b/spi-2016/devops/tp7/docker-compose.yaml
@@ -1,7 +1,13 @@
 version: '2'
 
 services:
-
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - 9090:9090
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ./prometheus/data:/prometheus
   influxdb:
     image: influxdb:alpine
     ports:
