separate prometheus target for node exporter

--- a/spi-2016/devops/tp7/prometheus/prometheus.yml
+++ b/spi-2016/devops/tp7/prometheus/prometheus.yml
@@ -6,6 +6,10 @@ scrape_configs:
   - job_name: 'prometheus'
 
     static_configs:
-      - targets: ['localhost:9090', 'localhost:9100', 'localhost:9323']
+      - targets: ['localhost:9090', 'localhost:9323']
         labels:
           group: 'prometheus'
+
+  - job_name: "node"
+    static_configs:
+      - targets: ['localhost:9100']
